[package]
name = "grep-rust"
version = "0.0.1"
edition = "2024"
authors = ["Dzulkifli Anwar <dzulkiflianwar2@gmail.com>"]
description = "A simple grep-like tool written in Rust for learning purposes."

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }

[dev-dependencies]
tempfile = "3.20.0"